*Empty MediaWiki Message*

--- a/Oldambt_(streek).mw
+++ b/Oldambt_(streek).mw
@@ -12,6 +12,8 @@ t Kultuur/geogroafisch gebied t Oldambt bestait uut t zulfde gebied as hierboven
 == t Oldambt tegenswoordeg ==
 t Oldambt kommt tegenswoordeg overain mit t historisch/stoatkundeg gebied mit as hoofdstad/belaankriekste ploats [[Winschoot]]. t Stait bekend om zien kapitoale stees in t oosten en de [[Blaauwe Stad]] bie Winschoot. 
 
+[[Ofbeelding:Seelandeoldambt.png|thumb|left|t Oldambt om 1300]]
+
 {{GrunnegerOmmelanden}}
 
 [[Kattegerie:Grunnegs artikel]]
