--- a/Stellingwarf.mw
+++ b/Stellingwarf.mw
@@ -18,9 +18,9 @@ De naeme ''Stellingwarf'' wodt veur et eerst vermeld in [[1309]]. ''Warf'' betek
 
 Van 1309 tot [[1504]] was Stellingwarf feitelik een onofhaankelike boerenrippebliek, de ''Vri'je Naosie der Stellingwarven''. Daorveur heurde et bi'j Drenthe en Overiessel ([[Oaversticht|Oversticht]]) en daordeur bi'j de [[bisschop]] van [[Utrecht]], waormit ze riegelmaotig in oorlog weren. Mit hulpe van de Friezen kon et grootste pat him onder et juk van de bisschop bevri'jden. Onder ere deur de slag bi'j [[Ane]] in [[1227]]. Daornao het Utrecht wel perbeert de Stellingwarvers d'r weer onder te kriegen, mar echt goed is dat niet lokt. In 1309 vernielen de Stellingwarver et [[kasteel]] van de bisschop in [[Vollenhove]] en geft die et min of meer op.
 
-Et Stellingwarver Laandrecht was in de 15e eeuw opschrieven. Et laandrecht is in et jaor 1480 verschiend.<ref>[http://www1.omropfryslan.nl/Mear_Nijs_60384.aspx Unyk midsieusk dokumint]</ref> In et laandrecht staon oolde rechtsregels en is uut et Latien naor et Nederlaands vertaold. Et laandrecht is een bewies van de Friese Vri'jhied in de Stellingwarven, naodat de luden in de Stellingwarven heur vri'jmaekt hadde van de bisschop. In et Freeska Landriucht (in 1480 as drokt boek publiceerd) staot Stellingwarf in et Traktaat van de Zeuven Zeelanen bie et vierde zeelaand nuum.<ref>[http://wikisource.org/wiki/Traktaat_fan_de_S%C3%A2n_seelannen Traktaat van de Zeuven Zeelanen] in et Ooldfries op Wikisource</ref>
+Et Stellingwarver Laandrecht is in de 15e eeuw opschreven en verscheen in et jaor 1480.<ref>[http://www1.omropfryslan.nl/Mear_Nijs_60384.aspx Omrop Fryslân; 'Unyk midsieusk dokumint' (Uniek middelieuws dokement)]</ref> In et laandrecht staon oolde rechtsregels; et is uut et Latien naor et Nederlaands vertaeld. Et laandrecht is een bewies van de [[Friese Vri'jhied]] in de Stellingwarven, naodat de luden in de Stellingwarven heur vri'jmaekt hadden van de bisschop. In et Freeska Landriucht (in 1480 as drokt boek publiceerd) staot Stellingwarf in et Traktaat van de Zeuven Zeelanen bi'j et vierde Zeelaand nuumd.<ref>[http://wikisource.org/wiki/Traktaat_fan_de_S%C3%A2n_seelannen Traktaat van de Zeuven Zeelanen] in et Ooldfries op Wikisource</ref>
 
-In [[1504]] wodde dit Stellingwarf veroverd deur de hertog van Saksen,  en formeel indield bi'j Frieslaand. De hertog doet alles in [[1515]] over an [[Karel V]]. In [[1517]] wodde et opsplitst in twie grieteni'jen: [[Ooststellingwarf|Stellingwarf-Oostaende]] en [[Weststellingwarf|Stellingwarf-Westaende]]. In de twiede helte van de [[19e eeuw|19e ieuw]] is et grootste pat van et vene ofgreven. Sund et aende van de [[20e ieuw]] wodt der keken naor et weer saemenvoegen van de Stellingwarven.
+In [[1504]] wodde dit Stellingwarf veroverd deur de hertog van Saksen en formeel indield bi'j Frieslaand. De hertog dee in [[1515]] alles over an [[Karel V]]. In [[1517]] wodde Stellingwarf opsplitst in twie grieteni'jen: [[Ooststellingwarf|Stellingwarf-Oostaende]] en [[Weststellingwarf|Stellingwarf-Westaende]]. In de twiede helte van de [[19e eeuw|19e ieuw]] is et grootste pat van et vene ofgreven. Sund et aende van de [[20e ieuw]] wodt der keken naor et weer saemenvoegen van de Stellingwarven.
 
 ==Tael==
 Et gebied onderscheidt him van [[Frieslaand]] deurdat d'r vanoolds gien [[Freesk|Fries]] praot wodt, mar et [[Nedersaksisch]]e dialekt [[Stellingwarfs]]. Ok de dialekten van (et noorden van) de [[Kop van Overiessel]] en van een pat van westelik Drenthe (omdebi'j de gemiente [[Westerveld (gemiente)|Westerveld]]) wodden taelkundig tot et Stellingwarfs rekend. Et kenmarkende van et Stellingwarfs is et gebruuk van de ae-klaank (lange è): et Hollaanse ''water'' is in et Stellingwarfs ''waeter'' (''Et waeter klaetert in de glaezen.''). Hoeveul et Stellingwarfs nog praot wodt is niet krekt bekend. Behalven aon et Nederlaands mos et dialekt ok aon et Fries terrein votgeven; veural Ooststellingwerf is sinds de negentiende iew stark verfriest wodden.
