--- a/Siemon_Reker.mw
+++ b/Siemon_Reker.mw
@@ -8,9 +8,11 @@ Reker is ain van de soamenstellers en schrievers van t ''[[Handboek Nedersaksisc
 *''Woordenboek Gronings-Nederlands, Nederlands-Gronings'' (1988)
 *''Groninger Spelling'' (1984)
 *''Omgekeerd is ook wat weerd'' (1985, retrogroade liest op t Grunnegs woordenbouk van [[Kornelis ter Laan]])
+*  De dichter en het Gronings, in: ''Willem ten Berge Groninger dichter. Poëzie en proza.''(1989). 
 *''"Hou is dat?" Het dialect van Groningen'' (1992)
 *''Dikke woorden. Bikkelhaard, bragelvet, strontdeurnat en hun soortgenoten'' (1996)
 *''Gronings'' (2002)
+*''Kies ais hier! Brokjes taal en letteren van het Hogeland en elders in Groningen'' (2004)
 *''Goidag! Taalgids Groningen'' (2005)
 *''Toal'' (kursusbouken over t West-, Oost- en Noord-Grunnegs, drij dailen, 2005)
 
