*Empty MediaWiki Message*

--- a/Bestaand:LocatieWestfrais.png.mw
+++ b/Bestaand:LocatieWestfrais.png.mw
@@ -1,2 +1,5 @@
+== Omschrieving ==
+Et Friso-Frankische dialekt van de regio West-Frieslaand in Noord-Hollaand. Et donkergrune bin de dialekten die deur de mieste lu ezien wodden as West-Fries, et lichtgrune bin de Friso-Frankische dialekten die söms wel, söms niet tot et West-Fries erekend wodden.
+
 == Licentie ==
 {{Eigenwark}}
