*Empty MediaWiki Message*

--- a/Klingon_(sproak).mw
+++ b/Klingon_(sproak).mw
@@ -140,30 +140,43 @@ Dit meervoud könt broekt wörden biej elk mensaktig weazn woarme'j n nörmoale 
 [[Kattegerie:Fiksie]]
 [[Kattegerie:Kunsttaol]]
 
-[[bs:Klingoni]]
-[[bg:Клингонци]]
-[[ca:Klingon]]
-[[cs:Klingoni]]
-[[et:Klingonid]]
-[[en:Klingon]]
-[[es:Klingon]]
-[[eo:Klingonoj]]
-[[fr:Klingon]]
-[[ga:Tliongánaigh]]
-[[hr:Klingonci]]
-[[is:Klingon]]
-[[it:Klingon]]
-[[he:קלינגונים]]
-[[hu:Klingonok]]
-[[mr:क्लिंगॉन]]
-[[nl:Klingon (Star Trek)]]
-[[ja:クリンゴン人]]
-[[pl:Klingoni]]
-[[pt:Klingons]]
-[[ru:Клингоны]]
-[[simple:Klingon]]
-[[sk:Klingóni]]
-[[sr:Klingonci]]
-[[fi:Klingonit]]
-[[sv:Klingon]]
-[[zh:克林贡]]
+[[an:Idioma klingon]]
+[[ast:Klingon]]
+[[br:Klingoneg]]
+[[ca:Klingon (idioma)]]
+[[cs:Klingonština]]
+[[cy:Tllingoneg]]
+[[da:Klingon (sprog)]]
+[[de:Klingonische Sprache]]
+[[en:Klingon language]]
+[[eo:Klingona lingvo]]
+[[es:Idioma klingon]]
+[[et:Klingoni keel]]
+[[eu:Klingon hizkuntza]]
+[[fi:Klingonin kieli]]
+[[fr:Klingon (langue)]]
+[[ga:Tliongáinis]]
+[[gl:Lingua klingon]]
+[[he:קלינגונית]]
+[[hr:Klingonski jezik]]
+[[id:Bahasa Klingon]]
+[[it:Lingua klingon]]
+[[ja:クリンゴン語]]
+[[jbo:bangrklingo]]
+[[kk:Клингон тілі]]
+[[ko:클링온]]
+[[li:Klingon]]
+[[ms:Bahasa Klingon]]
+[[nds:Klingoonsche Spraak]]
+[[nn:Klingon]]
+[[no:Klingon (språk)]]
+[[pl:Język klingoński]]
+[[pt:Língua klingon]]
+[[ro:Limba klingon]]
+[[ru:Клингонский язык]]
+[[simple:Klingon language]]
+[[sl:Klingonščina]]
+[[sr:Клингонски језик]]
+[[sv:Klingonska]]
+[[tl:Wikang Klingon]]
+[[zh:克林貢語]]
