*Empty MediaWiki Message*

--- a/Klingon_(sproak).mw
+++ b/Klingon_(sproak).mw
@@ -168,6 +168,7 @@ Dit meervoud könt broekt wörden biej elk mensaktig weazn woarme'j n nörmoale 
 [[li:Klingon]]
 [[ms:Bahasa Klingon]]
 [[nds:Klingoonsche Spraak]]
+[[nl:Klingon (taal)
 [[nn:Klingon]]
 [[no:Klingon (språk)]]
 [[pl:Język klingoński]]
