*Empty MediaWiki Message*

--- a/Stellingwarf.mw
+++ b/Stellingwarf.mw
@@ -8,8 +8,6 @@ In een kotleden (2006) daon onderzuuk dee blieken dat de mooiste gebieden van al
 
 In et noorden stroomt de [[Kuunder]], deur et midden van Stellingwarf stroomt de [[Lende]].
 
-De grootste plakken in Stellingwarf bin: [[Wolvege]], [[Oosterwoolde]], [[Appelsche]], [[Noordwoolde]] en [[Stienwiek]].
-
 ==Geschiedenis==
 [[Ofbeelding:Map Bavaria-Straubing - Karte Straubing-Holland.png|250px|right|thumb|Kaorte van Midden-Europa in de middelieuwen waor de Kop van Overiessel nog bi'j Stellingwarf rekend wodt.]]
 Waor de Stellingwarvers oorspronkelik wegkommen is niet hielendal wisse. D'r bestaot een verhael, dat ze rond [[840]] veur ien van de kleinzeunen van [[Karel de Grote]] naor disse streek vlucht bin vanuut een streek in et zuden van [[Hannover]] in [[Duutslaand]]. 
@@ -22,7 +20,38 @@ Et Stellingwarver Laandrecht is in de 15e eeuw opschreven en verscheen in et jao
 
 In [[1504]] wodde dit Stellingwarf veroverd deur de hertog van Saksen en formeel indield bi'j Frieslaand. De hertog dee in [[1515]] alles over an [[Karel V]]. In [[1517]] wodde Stellingwarf opsplitst in twie grieteni'jen: [[Ooststellingwarf|Stellingwarf-Oostaende]] en [[Weststellingwarf|Stellingwarf-Westaende]]. In de twiede helte van de [[19e eeuw|19e ieuw]] is et grootste pat van et vene ofgreven. Sund et aende van de [[20e ieuw]] wodt der keken naor et weer saemenvoegen van de Stellingwarven.
 
-==Tael==
+==Bevolking==
+In Weststellingwarf en Ooststellingwerf saemen wonen 52.050 meensken (1 jannewaori 2010). 
+
+===Belangriekste plakken===
+De grootste plakken in Stellingwarf mit meer as 1.000 inwoners per woongebied op [[1 jannewaori]] [[2008]] bin: 
+{| id="toc" style="margin: 0em 0em;"
+!'''Stellingwarfse naeme'''||'''''Nederlaanse naeme'''''||'''''Friese naeme'''''||'''Antal'''
+|-
+|[[Wolvege]]||''Wolvega''||''Wolvegea''||ALIGN="right"|12.419
+|-
+|[[Oosterwoolde]]||''Oosterwolde''||''Easterwâld''||ALIGN="right"|9.836
+|-
+|[[Appelsche]]||''Appelscha''||''Appelskea''||ALIGN="right"|4.953
+|-
+|[[Noordwoolde]]||''Noordwolde''||''Noardwâlde''||ALIGN="right"|3.789
+|-
+|[[Haulerwiek]]||''Haulerwijk''||''Haulerwyk''||ALIGN="right"|3.309
+|-
+|[[Berkoop]]||''Oldeberkoop''||''Aldeberkeap''||ALIGN="right"|1.550
+|-
+|[[Donkerbroek]]||''Donkerbroek''||''Donkerbroek''||ALIGN="right"|1.876
+|-
+|[[Steggerde]]||''Steggerda''||''Steggerda''||ALIGN="right"|1.111
+|-
+|[[Hooltpae]]||''Oldeholtpade''||''Aldeholtpea''||ALIGN="right"|1.072
+|-
+|[[Makkinge]]||''Makkinga''||''Makkingea''||ALIGN="right"|1.036
+|}
+</TD></TR></TABLE>
+<small>Bron: CBS</small><br />
+
+===Tael===
 Et gebied onderscheidt him van [[Frieslaand]] deurdat d'r vanoolds gien [[Freesk|Fries]] praot wodt, mar et [[Nedersaksisch]]e dialekt [[Stellingwarfs]]. Ok de dialekten van (et noorden van) de [[Kop van Overiessel]] en van een pat van westelik Drenthe (omdebi'j de gemiente [[Westerveld (gemiente)|Westerveld]]) wodden taelkundig tot et Stellingwarfs rekend. Et kenmarkende van et Stellingwarfs is et gebruuk van de ae-klaank (lange è): et Hollaanse ''water'' is in et Stellingwarfs ''waeter'' (''Et waeter klaetert in de glaezen.''). Hoeveul et Stellingwarfs nog praot wodt is niet krekt bekend. Behalven aon et Nederlaands mos et dialekt ok aon et Fries terrein votgeven; veural Ooststellingwerf is sinds de negentiende iew stark verfriest wodden.
 
 == Referensies ==
