*Empty MediaWiki Message*

--- a/Selterfrais.mw
+++ b/Selterfrais.mw
@@ -1,3 +1,4 @@
+[[Ofbeelding:LocatieSelterlaands.png|thumb|250px|De lokoatsie van t Selterfraise toalgebied in de Frieslanen]]
 [[Ofbeelding:Selterfrais.gif|thumb|250px|De lokoatsie van t Selterfraise toalgebied in Duutslaand]]
 {{Interwiki|code=stq}}
 t '''Selterfrais''' (in t Selterfrais zölf: ''Seeltersk'' of ''Seelterfräisk'') is n [[Freesk|Fraise toalvariaant]] dij nog sproken wordt deur n minderhaid van de inwoner van de gemainte [[Selterlaand]] ([[Duuts]]: Saterland), in t noordwesten van de dailstoat [[Nedersaksen]], in t westen de stad [[Oldenbörg]], zo'n viefteg kilometer van de [[Nederlaand]]se grens bie [[Schaanze]] ôf.
