--- a/Nedersaksische_literetuur.mw
+++ b/Nedersaksische_literetuur.mw
@@ -1,7 +1,7 @@
 {{wiu}}
 {{Zie dv|'''Dit artikel gef een oaverzicht van de Nedersaksische literetuur. Leest veur een briedere beschrieving de artikels [[Nedersaksische literetuur töt 1900]] en [[Nedersaksische literetuur vanof 1900]].}}
 
-[[Ofbeelding:Hans Heyting door Bert Kiewiet Borger.jpg|thumb|150px|Börstbield van de Drèentse dichter Hans Heyting (1918-1992)]]
+[[Ofbeelding:Hans Heyting door Bert Kiewiet Borger.jpg|thumb|150px|Börstbield van de Drèentse dichter [[Hans Heyting]] (1918-1992)]]
 '''Nedersaksische literetuur''' beslat de [[literetuur|literaire]] schrieveri'je in de verschillende dialecten van 't [[Nedersaksisch]]. Intied det de naodrok in dit artikel lig op 't Nedersaksisch van Nederlaand, wördt ok partie ontwikkelings in de [[Platduutse literetuur]] beschreven. Maank de Nedersaksische en de Platduutse literetuur is d'r jao een taalkundige, mar ok een culturele samenhang.
 
 Vake wördt naor Nedersaksische literetuur verwezen mit ''schrieveri'je''. Dit leste woord kuj ok brieder gebruken veur alles wat of d'r in 't Nedersaksisch eschreven wördt, mit of zunder literaire bedoelings.
@@ -21,7 +21,7 @@ Maank de Oldsaksische tied en de bluui van de Middelnederduutse literetuur ligt 
 ===Bluui van de taal===
 Mit de opkommende handel, veural deur steden die heur bi'jiensleuten in 't koopludenverbond van de [[Hanze]], gruuiden 't Oldsaksisch uut töt een schrief- en handelstaal. Uut dizze ontwikkeling, die zo'n honderdvieftig jaor eduurd hef, kwaamp 't Middelnederduuts naor veuren. Dit stadium van de taal beslat zo'n betien de 12e töt en met de 16e ieuw. De ''[[Saksenspiegel]]'', een invloedrieke verzameling van Saksisch recht uut um-en-bi'j 1225, gef de toestaand van de taal an nao dit perces. 't Middelnederduuts verbreidden hum ok mit de verhuzings van Saksen naor de Slavische gebieden ten oosten van de [[Elbe|Elve]] - 't hudige noordoosten van Duutslaand, en nog wieder hen 't oosten in 't hudige Polen. [[Oostfraislaand|Oost-]] en [[Noordfraislaand|Noordfrieslaand]] en de Friestalige [[Ommelanden]] neumen 't Middelnederduuts oaver ten koste van 't Fries.
 
-De bluuiperiode van 't Middelnederduuts lag zo maank 1370 en 1530. 't Weur de veurnaamste schrieftaal in 't noorden van [[Centraol-Europa]]. 't Was ok een ''lingua franca'' veur 't roemere noorden van Europa, die de woordenschat van 't [[Deens]], [[Noors]] en [[Zweeds]] slim beïnvloed hef.<ref name="haugen">Einar Haugen (1984). ''Die skandinavischen Sprachen''. Hambörg. ISBN 3-87118-551-5</ref> <!-- § 5.2 = p. 76-77 -->
+De bluuiperiode van 't Middelnederduuts lag zo maank 1370 en 1530. 't Weur de veurnaamste schrieftaal in 't noorden van [[Centraol-Europa]]. 't Was ok een ''lingua franca'' veur 't roemere noorden van Europa, die de woordenschat van 't [[Deens]], [[Noors]] en [[Zweeds]] slim beïnvloed hef.<ref name="haugen">Einar Haugen (1984). ''Die skandinavischen Sprachen''. [[Hambörg]]. ISBN 3-87118-551-5</ref> <!-- § 5.2 = p. 76-77 -->
 
 ===Belangrieke literaire warken===
 Oorspronkelijk kwaamp de Nederduutse literetuurtaal töt ontwikkeling in 't [[Oostfaolen|Oostfaolse]] [[Broenswiek (stad)|Broenswiek]], daoras e aordig veul an [[Hoogduuts]]e invloeden blootstund. Later verscheuf 't zwaortepunt hen de noordelijke Hanzesteden, boavenal [[Lübeck]], daor een standerdiserende invloed van uutgunk.
@@ -66,7 +66,7 @@ Veur zuksoort vermaak, in tegenstelling töt de hogere literetuur, weur de volks
 ===Schrieveri'je===
 In [[1652]] kump [[Johann Lauremberg]] (1590-1658) uut [[Rostock]] mit ''Veer Scherzgedichte, In Nedderdüdisch gereimt''. Naor 't schient, keert hi'j hum hiermit tegen de oftakeling van de volkstaal. Hi'j schrif: '' 'Unse Sprake blifft altidt bestendig und vest' ''. Mar zien schertsgedichten wördt begrepen as satire; hi'j stikt de gek an mit oldmoodse gebruken, en de Platduutse taal heurt daorbi'j. Lauremberg gebruukt dizze taal veur zien wiedere wark ok niet.<ref name="Nedderdüütsch Dichten">[http://www.ins-bremen.de/SchuppFrame.htm Nedderdüütsch Dichten - ehrgüstern, güstern un vundaag: Eenmaal verdwars dör uns' Literatuur]</ref>
 
-In 1661 kump in Amsterdam ''Den Westfaelschen Speel-Thuyn'' uut, mit daorin vief kluchten: 'De Historie van Slenner-Hincken Landlaup, Hellenvaurt un Juffrenhijlk', 'Tewesken Hochtijdt', 'Tewesken Kindelbehr', 'De Historie van Lukevent of 't Samenspraeck van Knubbe, Stortentuen un Lukevent' en [[Over-Ysselsche Boere-Vryagie|'Een Overijsselsche Vrijagie van Lubbert Boukslach unde Smudde-Mulen Swenne']]. De taalkundige [[Klaas Hanzen Heeroma|Klaas Heeroma]] situeert 'Lukevent' in de [[Gelderlaand|Gelders]]-[[Münsterlaand]]se grèensstreek en de 'Overijsselsche Vrijagie' in Zuudwest-Oaveriessel (waorschienlijk [[Dèventer]]).<ref>Klaas Heeroma (1958). 'Oostnederlands uit de 17de eeuw', in ''Driemaandelijkse Bladen'', 10e jaorgaank</ref>
+In 1661 kump in [[Amsterdam]] ''Den Westfaelschen Speel-Thuyn'' uut, mit daorin vief kluchten: 'De Historie van Slenner-Hincken Landlaup, Hellenvaurt un Juffrenhijlk', 'Tewesken Hochtijdt', 'Tewesken Kindelbehr', 'De Historie van Lukevent of 't Samenspraeck van Knubbe, Stortentuen un Lukevent' en [[Over-Ysselsche Boere-Vryagie|'Een Overijsselsche Vrijagie van Lubbert Boukslach unde Smudde-Mulen Swenne']]. De taalkundige [[Klaas Hanzen Heeroma|Klaas Heeroma]] situeert 'Lukevent' in de [[Gelderlaand|Gelders]]-[[Münsterlaand]]se grèensstreek en de 'Overijsselsche Vrijagie' in Zuudwest-Oaveriessel (waorschienlijk [[Dèventer]]).<ref>Klaas Heeroma (1958). 'Oostnederlands uit de 17de eeuw', in ''Driemaandelijkse Bladen'', 10e jaorgaank</ref>
 
 In een köppel gelegenheidsgedichten van [[Barbara Maria van Lier]] (1751-1778) bint [[Drèents|Drèentstalige]] frasen weerumme te vienden.<ref>[http://www.inghist.nl/Onderzoek/Projecten/DVN/lemmata/data/Lier Instituut voor Nederlandse Geschiedenis oaver Barbara Maria van Lier]</ref>
 
@@ -92,19 +92,19 @@ De textielondernemer [[Benjamin Blijdenstein]] (1780-1857) is mit 't ''Twenther 
 Aandere schrievers pakt vrog uut mit volledige bundels in de streektaal, zoas [[Wilhelm Bornemann]] (1766-1851) mit ''Plattdeutsche Gedichte'' (1810, viefde drok in 1843) en die zien naovolger [[Friedrich Wilhelm Albrecht]] mit ''Plattdeutsche Gedichte von einem altmärkischen Landmann'' (1817). [[Georg Nicolaus Bärmann|Georg Nicolaus (Jürgen Niklaas) Bärmann]] kump mit ''En Höög- un Häwel-Book för'n plattdüütschen Börger un'n Buren'' (1822), evolgd deur ''Dat grote Höög- un Häwel-Book: Dat sünd Dichtels, Rymels un Burenspillen in hamborger plattdüüdscher Mundart'' (1827).
 
 ===De almanakschrievers===
-In Nederlaand kump de Nedersaksische schrieveri'je anvankelijk in pervinciaole almenaks te staon. Almenaks, daoras de mèensen in de 19e ieuw drok op waren, kwamen alle jaoren uut en bevatten infermaotie van algemien belang, zoas kelenders, data van marken, dienstregelings van postkoetsen en beurtschippen, posttarieven en zo wieder. D'r stunden ok artikels, vertellegies en gedichten in, vake moraliserend van aord, die handelden oaver de eigen pervincie. Daor kun dan bi'j uutstek de streektaal veur gebruukt wörden - niet umdet de schrievers de laandstaal niet beheersten, mar umdet de streektaal heur schier toeleek as middel um 't volk te kunnen beschrieven.
+In Nederlaand kump de Nedersaksische schrieveri'je anvankelijk in pervinciaole almenaks te staon. Almenaks, daoras de mèensen in de 19e ieuw drok op waren, kwamen alle jaoren uut en bevatten infermaotie van algemien belang, zoas kelenders, data van marken, dienstregelings van postkoetsen en beurtschippen, posttarieven en zo wieder. D'r stunden ok artikels, vertellegies en gedichten in, vake moraliserend van aord, die handelden oaver de eigen [[pervincie]]. Daor kun dan bi'j uutstek de streektaal veur gebruukt wörden - niet umdet de schrievers de laandstaal niet beheersten, mar umdet de streektaal heur schier toeleek as middel um 't volk te kunnen beschrieven.
 
 In de ''Overijsselsche Almanak voor Oudheid en Letteren'' van 1837 stiet een bewarking van een gedicht van [[Ludwig Uhland]] deur [[Johannes Henricus Behrns]] (1803-1883) uut Eanske: ''Leed van 'nen olden bèddelman'', een '' 'typisch romantisch gedicht vol zelfbeklag' ''.<ref name="Twentse Beweging">[http://dissertations.ub.rug.nl/faculties/arts/2003/f.g.h.loewik/ F.G.W. Löwik (2003). ''De Twentse Beweging : strijd voor modersproake en eigenheid.'' Grunning: Rieksuniversiteit Grunning. Heufdstok ien]</ref>
 
 De kwaliteit van partie schrievers knapten op van 't gebruuk van de streektaal. Van [[G.A.C.W. le Vasseur de Coignée]], markies de Thouars (1807-1850) mient historicus [[Frank Löwik]]: 'Merkwaardig in tegenspraak met des dichters gezwollen stijl waar het gaat om zijn Nederlandstalige werk, staan zijn twee lange Twentse gedichten. Ze zijn heel direct van taal en daarom nog goed te lezen.' Dizze gedichten verschient ok in de ''Overijsselsche Almanak voor Oudheid en Letteren'': de ''Soamen-sproake tusschen Geert en Luuks an de Rammelbekke tusschen Dennekamp en Nothoorne'' (1838) en de ''Breef van Swooflings Hinte oet Amsterdam an zien volk in De Lutte biej Oldenzel'' (1839). Löwik schrif: 'De gedichten dragen de sporen van zijn verblijf in het Drentse. Hij hoorde daar tot [...] de zogenoemde Podagristen'.<ref name="Twentse Beweging">[http://dissertations.ub.rug.nl/faculties/arts/2003/f.g.h.loewik/ F.G.W. Löwik (2003). ''De Twentse Beweging : strijd voor modersproake en eigenheid.'' Grunning: Rieksuniversiteit Grunning. Heufdstok ien]</ref>
 
-[[Ofbeelding:De drie podagristen.jpg|thumb|left|210px|Staandbeeld in Coevern van de 'Drei Podagristen': zi'j zörgden veur publicatiekenalen veur de Nedersaksische schrieveri'je]]
+[[Ofbeelding:De drie podagristen.jpg|thumb|left|210px|Staandbeeld in [[Coevern]] van de 'Drei Podagristen': zi'j zörgden veur publicatiekenalen veur de Nedersaksische schrieveri'je]]
 ====De Drei Podagristen (Drenthe)====
-Drei anfieteraors van de schrieveri'je in Drenthe - in 't Nederlaands en in 't Drèents - waren de uutgever [[D.H. van der Scheer]] (1791-1859), de journalist [[Harm Boom]] (1810-1885) en de predikaant [[A.L. Lesturgeon]] (1815-1878). Zi'j publiceerden in 1843 't eerste diel van een riege reisverhalen onder de titel ''Drenthe in vlugtige en losse omtrekken geschetst door Drie Podagristen''. Podragristen bint lu mit voetjicht; de drei zolden in [[Bad Bentheim]] an 't kuren ewest hebben en van daoruut te voet en mit de koetse een reize deur een diel van Drenthe emeuken hebben, al hebt ze dit waorschienlijk niet warkelijk zo edaone. In heur verhalen bint Drèentstalige dialogen te vienden.
+Drei anfieteraors van de schrieveri'je in [[Drenthe]] - in 't Nederlaands en in 't Drèents - waren de uutgever [[D.H. van der Scheer]] (1791-1859), de journalist [[Harm Boom]] (1810-1885) en de predikaant [[A.L. Lesturgeon]] (1815-1878). Zi'j publiceerden in 1843 't eerste diel van een riege reisverhalen onder de titel ''Drenthe in vlugtige en losse omtrekken geschetst door Drie Podagristen''. Podragristen bint lu mit voetjicht; de drei zolden in [[Bad Bentheim]] an 't kuren ewest hebben en van daoruut te voet en mit de koetse een reize deur een diel van Drenthe emeuken hebben, al hebt ze dit waorschienlijk niet warkelijk zo edaone. In heur verhalen bint Drèentstalige dialogen te vienden.
 
-Rouke Broersma, die de Drèentse schrievers op de riege zet hef, mient van de Drei Podagristen:
+[[Rouke Broersma]], die de Drèentse schrievers op de riege zet hef, mient van de Drei Podagristen:
 
-'' 'Zij waren bepaald geen enghartige regionalisten, maar eerder ruimdenkende kosmopolieten, die, in overeenstemming met de toenmalige tijdgeest, de Romantiek, en vanuit een brede internationale oriëntatie, erkenning zochten voor het streekeigene, dus ook voor streektaal en streekliteratuur. Ze onderzochten, studeerden, schreven, zetten anderen aan tot onderzoek, studie en schrijven, ze ontwikkelden publicatiekanalen (uitgeverij, krant, almanak). De Drentse literatuur is begonnen.' ''<ref>Rouke Broersma (2003). ''Scheupers van de taol: bloemlezing van de Drèentse Schrieverij 1837-2003''. Zuudwolde: Stichting Het Drentse Boek</ref>
+'' 'Zij waren bepaald geen enghartige regionalisten, maar eerder ruimdenkende kosmopolieten, die, in overeenstemming met de toenmalige tijdgeest, de Romantiek, en vanuit een brede internationale oriëntatie, erkenning zochten voor het streekeigene, dus ook voor streektaal en streekliteratuur. Ze onderzochten, studeerden, schreven, zetten anderen aan tot onderzoek, studie en schrijven, ze ontwikkelden publicatiekanalen (uitgeverij, krant, almanak). De Drentse literatuur is begonnen.' ''<ref>Rouke Broersma (2003). ''Scheupers van de taol: bloemlezing van de Drèentse Schrieverij 1837-2003''. Zuudwolde: [[Stichting Het Drentse Boek]]</ref>
 
 In de eerste uutgaove, uut 1836, van Van der Scheer zien ''Drent(h)sche Volksalmanak'' stund 't eerste gedicht in 't Drèents, van [[Een Drenther|een anonieme 'Drenther']]: ''Zaomensproak over 't Broabands opreur, tussen Baerent, Greet en Harrem''. Partie lu mient ten onrechte det ''Het hunnebed te Borger'' van [[Willem Seymour Mulder]], in 1853 in de almenak ''Drenthina'' ezet, 't oldste Drèentstalige gedicht is.
 
