--- a/Mederne_devotie.mw
+++ b/Mederne_devotie.mw
@@ -5,7 +5,7 @@ De '''Mederne devotie ''' ([[Latien]]: ''Devotio moderna'') was een [[spirituali
 De grondlegger van de Mederne devotie was [[Geert Grote]] ([[Dèventer]], oktober 1340 - aldaor 20 augustus 1384). Hi'j wördden in Dèventer geboren as iene van een dikke haandelsfemilie. Grote vund gien voldoening in de haandel en richtten hum op [[religie]]uze zaken. De bestaonde praktijken van de karke vund e ok niet wat; hi'j zag ze as corrumperend. In zien stad stichtten hi'j de eerste woongemienschoppen van de [[Zusters van 't Gemiene Lèven]] en de [[Breurs van 't Gemiene Lèven]]. Dit waren gemienschoppen van leken (niet ewi'jde geestelijken). De zusters, en wat later ok de breurs, preekten een geestelijk reveil tègen de verloedering van 't lèven van de [[geestelijke|clerus]] en de verroeging van de volkse zeden. Heur veurnaamste bezigheden waren de zörg veur de studerende jongen en 't verbètern van de leefumstaandigheden van 't volk.
 
 ==Verantwoordelijkheid==
-Ien van Geert Grote zien heufdstellings was det iederiene zölf verantwoordelijk is veur zien of heur zieleheil. Umme God in de mute te gaon of contact mit Hum te hebben, onderwees e, bi-j gien bemiddelende geestelijke neudig. De dielnemers in de breurs- en zustergemienschoppen mussen daorumme ok gien belofte ofleggen an de karke. Daordeur kwaamp d'r in de 15e eeuw al drokte mit de bestaonde karke. De karkelijke autoriteiten maakten heur zörgen oaver de ontwikkelings binnen de Mederne devotie. De [[bisschop van Utrecht]], beveurbield, was niks wies mit veul van de in zien ogen rigoureuze opvattings en vaardigden veur de diakens van de gemienschoppen een preekverbod uut.
+Ien van Geert Grote zien heufdstellings was det iederiene zölf verantwoordelijk is veur zien of heur zieleheil. Umme [[God]] in de mute te gaon of contact mit Hum te hebben, onderwees e, bi-j gien bemiddelende geestelijke neudig. De dielnemers in de breurs- en zustergemienschoppen mussen daorumme ok gien belofte ofleggen an de karke. Daordeur kwaamp d'r in de 15e eeuw al drokte mit de bestaonde karke. De karkelijke autoriteiten maakten heur zörgen oaver de ontwikkelings binnen de Mederne devotie. De [[bisschop van Utrecht]], beveurbield, was niks wies mit veul van de in zien ogen rigoureuze opvattings en vaardigden veur de diakens van de gemienschoppen een preekverbod uut.
 
 Umme wiedere karkelijke maotregels te veurkomen, naamp een bulte gemienschoppen de riegel van de [[Darde Örde]] van Sunte [[Franciscus van Assisi|Franciscus]] an. Dizze veur leken bedoelde örderiegel sleut best an bi'j de ideaolen van Geert Grote. Waorschienlijk wördden deur dizze opstelling de Mederne devotie tègen wil en daank een belangrieke wegbereider van de [[riffermaotie]], die veural wörtel scheut en vaste voet an de grond kreeg in 't verspreidingsgebied van de Mederne devotie, de [[Hanze|Hanzeatische]] wereld in Noordwest-Europa.
 
