--- a/Zaender.mw
+++ b/Zaender.mw
@@ -26,10 +26,10 @@ De gemeente [[Angerlo]] is vanof 1 januari 2005 samen egoane mit de gemeente Zev
 [[Angerlo]], [[Babberich]], [[Bahr]], [[Bevermeer]], [[Bingerden]], [[Giesbeak]], [[Lathum]], [[Ooij (Zevenaar)|Ooy]] en [[Old Zevenaar]].
 
 == Geskiedenisse ==
-Nen olden name veur Zevenaar is ''Seventer'', dat kump of van et [[Middeleeuwn|Middeleeuwse]] kasteel Sevenaer. Kasteel Sevenaer zol vanweage de strategiese ligging ne cruciale rolle spöllen in den stried um de Liemers.
-Den laandsheer mit et gode oge veur de umgeaving is woarschijnlek Otto II van [[Gelre]]. Hi-j kocht op 16 juni 1256 nen hof, boerderi-jen, laanderi-jen, wiezen, visrechten, wooste groonden, enz. te Zevenaar van et kapittel van Sint-Marie in [[Utrecht]].
+Nen olden name veur Zevenaar is ''Seventer'', dat kump of van et [[Middeleeuwn|Middeleeuwse]] [[kasteel]] Sevenaer. [[Kasteel Sevenaer]] zol vanweage de strategiese ligging ne cruciale rolle spöllen in den stried um de Liemers.
+Den laandsheer mit et gode oge veur de umgeaving is woarschienlek Otto II van [[Gelre]]. Hi-j kocht op 16 juni 1256 nen hof, boerderi-jen, laanderi-jen, wiezen, visrechten, wooste groonden, enz. in Zevenaar van et kapittel van Sint-Marie in [[Utrecht]].
 
-De gemeente Zevenaar ligt in et harte van de [[Liemers]]. Dit gebeed ligt in den dreehook van den Rien, den zudeleken Iesselover en de landsgrenze. Dizze ligging hef in de löppe van de eeuwn nen stempel edrökt op de ontwekkeling van de streake.
+De gemeente Zevenaar ligt in et harte van de [[Liemers]]. Dit gebeed ligt in den dreehook van den [[Rien]], den zudeleken Iesselover en de landsgrenze. Dizze ligging hef in de löppe van de eeuwn nen stempel edrökt op de ontwekkeling van de streake.
 
 ==Greuj==
 Noa den Tweeden Wealdkrieg, den Zevenaar völle schaa bracht, wierd den wederopbouw veurtvoarend an-epakt en ni-je wieken verrezen in snel tempo rundum de olde karn. In 1958 bedroog et inwonnertal van de stad Zevenaar 10.000.  Et inwonnertal is noe rundum de 31.000. End [[2007]] zol een anvang wödden emaakt mit et bouwen van twee ni-je wonwieken, Reisenakker in et noord-westen en Groot Holthuzen in et oosten. Mit Groot Holthuzen krig Zevenaar n tweede spoorlienestation ([[Station Zevenaar Oost|Zevenaar Oost]]). Zevenaar kent gode veurzeningen op terreinen as onderwies, sport, gezondheid (zekenhoes), wark en kultuur. 
