--- a/Zaender.mw
+++ b/Zaender.mw
@@ -35,7 +35,7 @@ De gemeente Zevenaar ligt in et harte van de [[Liemers]]. Dit gebeed ligt in den
 Noa den Tweeden Wealdkrieg, den Zevenaar völle schaa bracht, wierd den wederopbouw veurtvoarend an-epakt en ni-je wieken verrezen in snel tempo rundum de olde karn. In 1958 bedroog et inwonnertal van de stad Zevenaar 10.000.  Et inwonnertal is noe rundum de 31.000. End [[2007]] zol een anvang wödden emaakt mit et bouwen van twee ni-je wonwieken, Reisenakker in et noord-westen en Groot Holthuzen in et oosten. Mit Groot Holthuzen krig Zevenaar n tweede spoorlienestation ([[Station Zevenaar Oost|Zevenaar Oost]]). Zevenaar kent gode veurzeningen op terreinen as onderwies, sport, gezondheid (zekenhoes), wark en kultuur. 
 
 == Wettensweerdegheden ==
-In Zevenaar steet den [[Butenmölle]]. De geskiedenisse van dizze toornnmölle geet trög tot [[1408]]. Doarmet is et ene van de oldste möllen in Nederlaand.
+In Zevenaar steet de [[Butenmölle]]. De geskiedenisse van dizze toornnmölle geet trög tot [[1408]]. Doarmet is et ene van de oldste möllen in Nederlaand.
 
 
 
