--- a/Heerlekheid.mw
+++ b/Heerlekheid.mw
@@ -26,10 +26,10 @@ An ne heerlekheid waarn geldeleke en zakeleke rechten verbonden, waarbij den hee
 
 == Feodaliseerde karkeleke rechten ==
 
-In sommige heerlekheden waren der in duustere tieden ok zekere veurrechten opgeslorpt dee eigenlek an de karke toobeheurden. Zo kon nen heer oaver et collatierecht beschikken of kon n [[tiende]] n feodaal good ewodden wean. Ok had den heer soms insproak bi-j de beneuming van nen priester, bi-jveurbeeld umdat de parochiekarke ziene eigen karke was (d.w.z. ooit op-gericht deur nen veurmoalig bezitter van dee heerlekheid). Al tiedens de Hoge Middeleeuwn gaf dit anleiding tot genöäl met de karkeleke oaverheid (wederrechteleke inbezitnemming). Ok as gevolg van de [[Reformatie]] leidden de bemeujenis van nen heer bi-j de keuze van nen predikant tot heavige spanningen tussen um en ziene underdoanen, met name in plaetse woar den heer n ander geleuf was too-edoan as de meerderheid van de karkgangers.
+In sommige heerlekheden waren der in duustere tieden ok zekere veurrechten opgeslorpt dee eigenlek an de karke toobeheurden. Zo kon nen heer oaver et collatierecht beschikken of kon n [[tiende]] n feodaal good ewodden wean. Ok had den heer soms insproak bi-j de beneuming van nen priester, bi-jveurbeeld umdat de parochiekarke ziene eigen karke was (d.w.z. ooit op-gericht deur nen veurmoalig bezitter van dee heerlekheid). Al tiedens de Hoge Middeleeuwn gaf dit anleiding tot genöäl met de karkeleke oaverheid (wederrechteleke inbezitnemming). Ok as gevolg van de [[Reformatie]] leidden de bemeujenis van nen heer bi-j de keuze van nen predikant tot heavige spanningen tussen um en ziene underdoanen, met name in plaetse woar den heer n ander [[geleuf]] was too-edoan as de meerderheid van de karkgangers.
 
 == Geldelek hulpmiddel en bronne van anzeen ==
-Deur et geleidelek wegvallen van de oorlogsverplichtingen dee an nen leen verbonden waren, wierd et bezit van ne heerlekheid vanof de 16de-17de eeuwe meer en meer n Geldelek hulpmiddel en tegeliekertied ok ne bronne van anzeen. An ne heerlekheid waren veulal uutgestrekte pachtvelden en mangs ok nen burcht of kasteel verbonden. Doardeur was ne heerlekheid (as butensteads verblief) ne antrekkeleke investering veur succesvolle koopleu en leden van et stadspatriciaat. Met den ankoop konden zi-j zich tegeliekertied veurdoan as edelleu. 
+Deur et geleidelek wegvallen van de oorlogsverplichtingen dee an nen leen verbonden waren, wierd et bezit van ne heerlekheid vanof de 16de-17de eeuwe meer en meer n Geldelek hulpmiddel en tegeliekertied ok ne bronne van anzeen. An ne heerlekheid waren veulal uutgestrekte pachtvelden en mangs ok nen [[burcht]] of [[kasteel]] verbonden. Doardeur was ne heerlekheid (as butensteads verblief) ne antrekkeleke investering veur succesvolle koopleu en leden van et stadspatriciaat. Met den ankoop konden zi-j zich tegeliekertied veurdoan as edelleu. 
 
 In de Zudeleke Nederlanden wierd de geldeleke eigenskop van ne heerlekheid nog benoadrukt deur et Könninklek Edict (deur ne laandsoverheid of-ekundigd besluut) van 8 mei 1664. Nen adelleken titel wierd vanof dan alleneg verleend op veurweerde van n minimum bedrag an inkomsten te behalen uut leengooderen:
 * veur ne [[baronie]]: 6000 gulden;
