--- a/Feodalisme.mw
+++ b/Feodalisme.mw
@@ -12,7 +12,7 @@ In Duutslaand wisten de [[Liudolfingen|Ottonen]] dizzen toostaand teggen te hold
 == Eursprong ==
 [[Ofbeelding:Rolandfealty.jpg|thumb|[[Roland (ridder)|Roland]] vouwt ziene hende ten tekken van [[manschop]] an [[Karel den Groten]]; uut n skrift van n ''[[chanson de geste]]''.]]
 [[Ofbeelding:Cleric-Knight-Workman.jpg|thumb|220px|De dree standen]]
-Et feodalisme was egreujd uut de [[standenmoatschoppi-je]] van et late [[Karolingiese riek]]. De [[Frankiese Riek|Frankiese]] könningen stoolden eursprönkelek hun machte veural op den joarlekse veld- (leas: plunder)tochten. Den könning kon zien ekearls belonen uut den buut dee doarbi-j behoald wodden. Toen [[Karel den Groten]] n groot deel van Europa veroaverd had, en doar buten ziene laandsgrenzen eigenlek gin rieke gebeeden ovaer waren um te plunderen, mös hi-j ne andere wieze bedenken um ziene kearls an zich te verplichten. Boavendien was et riek völ te groot veur de olderwetse [[kommunikatie]] in dee tied. Den könning was edwongen zunder ende op tocht te goan um plaatselek zien gezag of te künnen dwingen en ziene belastingen ter plaatse ''op te eaten'', want dizzen wödden veulal in natura voldoan. Hi-j had doarumme plaatseleke verteggenweurdigers neudig en uut dizze - anvankele- ambtenoaren is den [[aristocratie|adelstaand]] ontstoan.
+Et feodalisme was egreujd uut de [[standenmoatschoppi-je]] van et late [[Karolingiese riek]]. De [[Frankiese Riek|Frankiese]] könningen stoolden eursprönkelek hun machte veural op den joarlekse veld- (leas: plunder)tochten. Den könning kon zien ekearls belonen uut den buut dee doarbi-j behoald wodden. Toen [[Karel den Groten]] n groot deel van [[Europa]] veroaverd had, en doar buten ziene laandsgrenzen eigenlek gin rieke gebeeden ovaer waren um te plunderen, mös hi-j ne andere wieze bedenken um ziene kearls an zich te verplichten. Boavendien was et riek völ te groot veur de olderwetse [[kommunikatie]] in dee tied. Den könning was edwongen zunder ende op tocht te goan um plaatselek zien gezag of te künnen dwingen en ziene belastingen ter plaatse ''op te eaten'', want dizzen wödden veulal in natura voldoan. Hi-j had doarumme plaatseleke verteggenweurdigers neudig en uut dizze - anvankele- ambtenoaren is den [[aristocratie|adelstaand]] ontstoan.
 
 == De feodale standenmoatschoppi-je ==
 De dree staanden waren:
