--- a/Frans_Roes.mw
+++ b/Frans_Roes.mw
@@ -4,8 +4,8 @@ Den bekendsten figuur oet zien verhalen is Aornt Peppelenkamp, nen armen bessenb
 In de periode 1945 - 1950 skref Roes ok veer streekromans in et dialekt: ‘Steven Volman’ (z.j.), ‘Uut ‘t laeven van olde bekenden’ (1945), ‘Een mens vindt zienen weg (z.j.) en ‘Van Achterhooksche Menschen’ (1950).
 Ok skref e dree toneelstukken in et dialekt: ‘Um den olden Berenschot’, ‘Uut de modder’ en ‘Riek Geesink’. Deze stukken slotten an bi-j de aktualiteit van dat moment. Dat was ovveregens ok et geval met zien verhalen.
 In 1955 wier in [[Reurle]] zien spel in de boetenloch ‘Um den olden Saksenheerd’ op evoerd.
-Van ziene verhalen bunt zon tien bundels oet ebracht, dee-t bunt oet egovven deur Misset-[[Deutekem]], Witkamp-[[Eanske]] en Van den Berg-[[Eanske]]. In 2002 hebt de Stichting [[Staring Instituut]] en de Mr. H.J. Steenbergenstichting den roman ‘Steven Volman’ ovverni-js edrukt. Deur et Staring instuut bunt twee luusterbeuke met verhalen van Frans Roes oetebracht met den name ‘Arie laest Aornt’, deel 1 (2006, uitverkocht) en deel 2 (2007).
-Frans Roes mag als den meest populairen skriever auteur van den Achterhoek wodden beschouwd, den vooral opvölt deur ne rake tiepering van de leu in zien umgeaving.
+Van ziene verhalen bunt zon tien bundels oet ebracht, dee-t bunt oet egovven deur Misset-[[Deutekem]], Witkamp-[[Eanske]] en Van den Berg-[[Eanske]]. In 2002 hebt de Stichting [[Staring Instituut]] en de Mr. H.J. Steenbergenstichting den roman ‘Steven Volman’ ovverni-js edrukt. Deur et Staring instuut bunt twee luusterbeuke met verhalen van Frans Roes oetebracht met den name ‘Arie laest Aornt’, deel 1 (2006, oetverkocht) en deel 2 (2007).
+Frans Roes mag als den meest populairen skriever van den Achterhoek wodden beschouwd, den vooral opvölt deur ne rake tiepering van de leu in ziene umgeaving.
 
 ==Bronnen / oetgoande verwiezing==
 *http://www.dialectkring.nl/?pageId=200&Frans_Roes
