--- a/Frans_Roes.mw
+++ b/Frans_Roes.mw
@@ -2,7 +2,7 @@ Frans Roes ([[1902]] [[Gaandern]] - [[1974]] [[Hengel]]), was nen Achterhooksen 
 Den bekendsten figuur oet ziene verhalen is Aornt Peppelenkamp, nen armen bessenbinder op de Koolhovense heide.
 
 Tussen 1945 - 1950 skref Roes ok veer streekromans in et dialekt: ‘Steven Volman’ (z.j.), ‘Uut ‘t laeven van olde bekenden’ (1945), ‘Een mens vindt zienen weg (z.j.) en ‘Van Achterhooksche Menschen’ (1950).
-Ok skref e dree toneelstukken in et plat: ‘Um den olden Berenschot’, ‘Uut de modder’ en ‘Riek Geesink’. Deze stukken slotten an bi-j de aktualiteit van dat moment. Dat was ovveregens ok et geval met zien verhalen.
+Ok skref e dree toneelstukken in et plat: ‘Um den olden Berenschot’, ‘Uut de modder’ en ‘Riek Geesink’. Deze stukken slotten an bi-j de aktualiteit van dat moment. Dat was ovveregens ok et geval met ziene verhalen.
 In 1955 wier in [[Reurle]] zien spel in de boetenloch ‘Um den olden Saksenheerd’ op evoerd.
 Van ziene verhalen bunt zon tien bundels oet ebracht, dee-t bunt oet egovven deur Misset-[[Deutekem]], Witkamp-[[Eanske]] en Van den Berg-[[Eanske]]. In 2002 hebt de Stichting [[Staring Instituut]] en de Mr. H.J. Steenbergenstichting den roman ‘Steven Volman’ ovverni-js edrukt. Deur et Staring instuut bunt twee luusterbeuke met verhalen van Frans Roes oetebracht met den name ‘Arie laest Aornt’, deel 1 (2006, oetverkocht) en deel 2 (2007).
 Frans Roes mag als den meest populairen skriever van den Achterhoek wodden beschouwd, den vooral opvölt deur ne rake tiepering van de leu in ziene umgeaving.
