*Empty MediaWiki Message*

--- a/Frans_Roes.mw
+++ b/Frans_Roes.mw
@@ -5,7 +5,7 @@ Tussen 1945 - 1950 skref Roes ok veer streekromans in et dialekt: ‘Steven Volm
 Ok skref e dree toneelstukken in et plat: ‘Um den olden Berenschot’, ‘Uut de modder’ en ‘Riek Geesink’. Deze stukken slotten an bi-j de aktualiteit van dat moment. Dat was ovveregens ok et geval met ziene verhalen.
 In 1955 wier in [[Reurle]] zien spel in de boetenloch ‘Um den olden Saksenheerd’ op evoerd.
 Van ziene verhalen bunt zon tien bundels oet ebracht, dee-t bunt oet egovven deur Misset-[[Deutekem]], Witkamp-[[Eanske]] en Van den Berg-[[Eanske]]. In 2002 hebt de Stichting [[Staring Instituut]] en de Mr. H.J. Steenbergenstichting den roman ‘Steven Volman’ ovverni-js edrukt. Deur et Staring instuut bunt twee luusterbeuke met verhalen van Frans Roes oetebracht met den name ‘Arie laest Aornt’, deel 1 (2006, oetverkocht) en deel 2 (2007).
-Frans Roes mag als den meest populairen skriever van den Achterhoek wodden beschouwd, den vooral opvölt deur ne rake tiepering van de leu in ziene umgeaving.
+Frans Roes mag als den meest populairen skriever van den Achterhook wodden ezene, den vooral opvölt deur ne rake tiepering van de leu in ziene umgeaving.
 
 ==Bronnen / oetgoande verwiezing==
 *http://www.dialectkring.nl/?pageId=200&Frans_Roes
