/* Uut de tied */

--- a/1974.mw
+++ b/1974.mw
@@ -14,8 +14,8 @@ De volgende gebeurtenissen vunnen plaose in dit jaor
 * [[24 september]] - [[Jeroen Heubach]], nen Tweantsen vootbalspöller, den bie FC Tweante spöld hef
 
 == Uut de tied ==
-* [[8 meert]] - [[Wim Sonneveld]] (56), Nederlaanse grappenmaker
-
+* [[8 meert]] - [[Wim Sonneveld]] (56), Nederlaansen grappenmaker
+* [[Frans Roes]] (72), [[Achterhook|Achterhooksen]] skriever.
 [[af:1974]]
 [[am:1974 እ.ኤ.አ.]]
 [[an:1974]]
