--- a/1974.mw
+++ b/1974.mw
@@ -3,12 +3,12 @@
 De volgende gebeurtenissen vunnen plaose in dit jaor
 
 == Gebeurtenissen ==
-* [[Normaal]] wordt op-ericht
+* [[Normaal]] wöd op-ericht
 * [[25 april]] - [[Anjerrevolusie]] in [[Portugal]]
 * [[6 meie]] - Oftreden van [[Willy Brandt]] as bondskanselier van [[West-Duutslaand]]
 * [[15 juli]] - Militaire staotsgrepe op [[Cyprus]], woarnoa [[Turkije]] op [[20 juli]] ingrip
 * [[10 september]] - [[Guinee-Bissau]] wonnen onofhankelijk van [[Portugal]]
-* [[12 september]] - [[Haile Selassi]] wordt of-ezet as keizer van [[Ethiopië]]
+* [[12 september]] - [[Haile Selassi]] wöd of-ezet as keizer van [[Ethiopië]]
 
 == Geboaren ==
 * [[24 september]] - [[Jeroen Heubach]], nen Tweantsen vootbalspöller, den bie FC Tweante spöld hef
