*Empty MediaWiki Message*

--- a/24_jannewaori.mw
+++ b/24_jannewaori.mw
@@ -10,6 +10,7 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''24 jannewaori'''
 * ...
 
 == Uut de tied ==
+* [[1767]] - [[Anthony Christiaan Winand Staring]], [[Achterhook|Achterhooksen]] skriever
 * [[2004]] - [[Peter van der Velde]], Drentse schriever
 
 {{DEFAULTSORT:#::24 Jannewaori}}
