--- a/2004.mw
+++ b/2004.mw
@@ -54,6 +54,7 @@
 * 25 jannewaori - [[Fanny Blankers-Koen]], atlete (85)
 * 29 jannewaori - [[Guusje Nederhorst]], actrice (34)
 * 3 febrewaori - [[Fiep Westendorp]], Nederlaandse tekenaarster
+* [[24_jannewaori]] - [[Peter van der Velde]], Drentsen skriever
 * 20 meert - [[Juliana van Nederlaand|Juliana van Oranje-Nassau]], oud-koneginne van [[Nederlaand]]
 * 29 meert - [[Peter Ustinov]], acteur
 * 4 april - [[Briek Schotte]], Vlaomse wielrenner
