--- a/11_november.mw
+++ b/11_november.mw
@@ -3,7 +3,7 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''11 november'''
 
 == Gebeurtenissen ==
 * [[1889]] - [[Washington (staot)|Washington]] wonnen een staot van [[Verienigde Staoten van Amerika|Amerika]].
-* [[1918]] - In de [[Eerste Wereldoorlog]] wonnen een wapenstilstaand bereik.
+* [[1918]] - In de [[Eerste Wealdkrieg|Eerste Wereldoorlog]] wonnen een wapenstilstaand bereik.
 * [[1975]] - [[Angola]] wonnen onofhankelijk van [[Portugal]].
 
 == Geboren ==
