--- a/1918.mw
+++ b/1918.mw
@@ -1,7 +1,10 @@
 {{NavJaor}}
 
-==Geboren==
-*[[5 febrewaori]]: [[Peter van der Velde]], Drentsen skriever
+== Gebeurtenissen ==
+* [[11 november]] - ende van n [[Eerste Wealdkrieg]]
+
+== Geboren ==
+*[[5 febrewaori]] - [[Peter van der Velde]], Drentsen skriever
 
 [[af:1918]]
 [[am:1918 እ.ኤ.አ.]]
