--- a/Finlaand.mw
+++ b/Finlaand.mw
@@ -9,7 +9,7 @@
 | regeernsvörm = [[Rippebliek|Republiek]]
 | km2 = 337.030 | pctwater = 9.4
 | inwoner = 5.246.879 (2005) | dichtte = 17,1
-| munt = euro | valutakode = EUR
+| munt = [[uro|euro]] | valutakode = EUR
 | tiedzone = +2
 | volkslaid = [[Maamme (Vårt land)]]
 | feestdag = 6 december
