Driemaandelijkse Bladen: info uut HNTL

--- a/Nedersaksische_tiedschriften.mw
+++ b/Nedersaksische_tiedschriften.mw
@@ -6,9 +6,11 @@
 Vanof de [[19e eeuw|nègentiende ieuw]] verschenen Nedersaksische verhaalties, gedichten, anekdotes, woordenliesten en zuks in [[almenak|almenakken]] in de pervincies [[Grunnen (provìnzie)|Grunning]], [[Drenthe]], [[Oaveriessel]] en [[Gelderlaand]]. Dizze almenakken kwammen alle jaoren uut en bevatten, naost infermaotie van algemien belang, geschied- en volkskundige teksten, mangs in de volkstaal. Dit waren de eerste bladen daoras 't eschreven Nedersaksisch een stee in kreeg.
 
 ==Driemaandelijkse Bladen==
-In de ''[[Driemaandelijkse Bladen|Driemaandelijks(ch)e Bladen]]'', veur 't eerst uutegèven 1901 deur de Vereeniging tot onderzoek van van Taal en Volksleven in het Oosten van Nederland, stund onderzuuk oaver 't Nedersaksisch, mar ok verhalen in de streektaal, zoas van de [[Zwolle|Zwollenaor]] [[Willem Kloeke]] (1852-1934).<ref>[http://www.wieiswieinoverijssel.nl/details2.asp?Id=122 Wie is wie in Overijssel: Willem Kloeke]</ref> D'r stunden ok woordenliesten in, zoas die van de Gelders-Oaveriesselse dialecten, an-elegd deur de 'Nedersaksische pionier' [[Johan Hendrik Gallée]] (1847-1908).<ref>[http://www.biografischwoordenboekgelderland.nl/bio/3_Johan_Hendrik_Gallee Biografisch Woordenboek Gelderland: Johan Hendrik Gallée]</ref>
+In de ''[[Driemaandelijkse Bladen|Driemaandelijks(ch)e Bladen voor taal en volksleven in het oosten van Nederland]]'', veur 't eerst uutegèven 1901 deur de Vereeniging tot onderzoek van Taal en Volksleven in het Oosten van Nederland, stund onderzuuk oaver 't Nedersaksisch. Ok vunden ie d'r Nedersaksischtalige verhalen in, zoas van de [[Zwolle|Zwollenaor]] [[Willem Kloeke]] (1852-1934).<ref>[http://www.wieiswieinoverijssel.nl/details2.asp?Id=122 Wie is wie in Overijssel: Willem Kloeke]</ref> D'r stunden woordenliesten in, zoas die van de Gelders-Oaveriesselse dialecten, an-elegd deur de 'Nedersaksische pionier' [[Johan Hendrik Gallée]] (1847-1908).<ref>[http://www.biografischwoordenboekgelderland.nl/bio/3_Johan_Hendrik_Gallee Biografisch Woordenboek Gelderland: Johan Hendrik Gallée]</ref> Ok naamkunde en de studie van Nedersaksische literetuur hadden een stee, en bi'jdrages die de samenhang van 't Nedersaksisch en 't Platduuts behaandelden.
 
-De ''Bladen'' hölden in 1930 op te verschienen, mar een ni'je riege wördden op-ezet in 1949. In 1955 wördden de ''Bladen'' 't orgaan van 't [[Nedersaksisch Instituut]] van de [[Rieksuniversiteit Grunning]]. In 2002 was 't vanni'js of-elopen mit de ''Driemaandelijkse Bladen''.<ref>[http://www.encyclopediedrenthe.nl/Driemaandelijkse%20Bladen Encyclopedie Drenthe Online oaver de Driemaandelijkse Bladen]</ref>
+De ''Bladen'' stunden onder redactie van de Achterhoekers Gallée en [[Gerrit Jan Klokman]], bi'jestaone deur mitwarkers uut aandere Oost-Nederlaandse regio's. Vanof 1909 deu [[Jan Bergsma]] de redactie. In 't crisisjaor 1931 hölden de ''Bladen'' op te verschienen, mar een ni'je riege wördden op-ezet in 1949. Hierveur wördden een veriening op-ericht deur [[Hendrik Bezoen]] uut [[Twente]] en [[Jan Naarding]] uut Drenthe.
+
+In 1955 wördden de ''Bladen'' 't orgaan van 't [[Nedersaksisch Instituut]] van de [[Rieksuniversiteit Grunning]]. In 2002 was 't vanni'js of-elopen mit de ''Driemaandelijkse Bladen''.<ref>[http://www.encyclopediedrenthe.nl/Driemaandelijkse%20Bladen Encyclopedie Drenthe Online oaver de Driemaandelijkse Bladen]</ref><ref>*Ludger Kremer (2008), 'Geschiedenis van de Nedersaksische taalkunde'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum</ref>
 
 ==Platduuts==
 Sunds [[1907]] gef de [[Platduuts|Platduutse]] veriening Quickborn een tiedschrift uut, sunds 1968 onder de name ''[[Quickborn (tiedschrift)|Quickborn: Zeitschritt für plattdeutsche Sprache und Dichtung]]''. In 't vördeljaors verschienende tiedschrift viej verhandelingen, besprèkings, berichten en ni'jgies.
