*Empty MediaWiki Message*

--- a/Gildehoes.mw
+++ b/Gildehoes.mw
@@ -4,7 +4,7 @@
 
 t Doarp wör vuur t eerste neump in [[1292]], doo't nog ''Nyenkerken'' heten. Töt an [[1974]] was Gildehoes ne egene gemeente, doarnoa köm t bie Bad Beantem. Bie de parochie Gildehoes beheurt ook de plaatsen [[Achterbearg]], [[Bardel]], [[Hagelshook]], [[Hoolt en Hoar]], [[Woldziede]], [[Westenbearg]], dee't vroger op zikzelf steunden.
 
-In Gildehoes wont redelik wat Neerlaanders, vuural oet Tweante, umdet de huzeprieze in Duutslaand wat leger zeent. In de wieke Pieper-Werning is zelfs 75% van inwonners Neerlaands.
+In Gildehoes wont redelik wat Neerlaanders, vuural oet Tweante, umdet de huzeprieze in Duutslaand wat leger zeent. In de wieke Pieper-Werning is 75% van de inwonners Neerlaands.
 
 [[Kattegerie:Tweants artikel]]
 [[Kattegerie:Duutslaand]]
