/* Bibliografie */ Ni'j woordenboek en ni'je cd

--- a/Graofschopper_plat.mw
+++ b/Graofschopper_plat.mw
@@ -127,9 +127,11 @@ Sund 1978 bestiet de [[Groafschupper Plattproater Kring]] (veurzitter sund 1984:
 * [http://www.gbiu.de/metmekaar/platt.htm ''metmekaar'': gedichten en vertellegies in 't Graofschopper plat]
 * [http://uelsen-und-umgebung.de/geschichten/ www.Uelsen-und-Umgebung.de - vertellegies en gedichten, ok in 't plat]
 
-==Bibliografie==
+==Biblio- en audiografie==
 *Arnold Rakers (1944). ''Die Mundarten der alten Grafschaft Bentheim und ihrer reichsdeutschen und niederländischen Umgebung : Auf dialektgeographisch-geschichtlicher Grundlage ; mit einem Mundartatlas von 142 Karten (im Anhang)''. Ollenborg: Stalling
 *Arnold Rakers (1993). ''Mundartatlas der alten Grafschaft Bentheim. Hrsg., bearb. und auf der Basis des Rakersschen Forschungsansatzes komm. von Hendrik Entjes und Hermann Niebaum''. Sögel: Emsländische Landschaft für die Landkreise Emsland und Bentheim
+*Groafschupper Plattproater Kring mit de Landkreis Grafschaft Bentheim (2010), ''Grafschafter Platt. Wörterbuch Hochdeutsch - Plattdeutsch für Kindertageseinrichtungen und Grundschulen der Grafschaft Bentheim''. 't Woordenboek hef zo'n 3000 ingangen en een anhangsel mit de vrogger miest gebrukelijke veurnamen, plaanten-, dieren- en plaatsnamen, 't zeggen van de tied, getallen, warkwoordsvervoegings, en veulgebruukte zinnen in kienderdagverblieven en op schoelen.
+*Groafschupper Plattproater Kring mit de Landkreis Grafschaft Bentheim (2010), ''Grafschafter Platt. Eine Wanderung durch die Variantenreiche plattdeutsche Sprache der Grafschaft''. CD mit sprekers uut verschillende dielen van de Graofschop, die de plaatselijke verschillen laot heuren.
 
 == Rifferenties ==
 <references />
