--- a/Nedersaksische_tiedschriften.mw
+++ b/Nedersaksische_tiedschriften.mw
@@ -6,11 +6,28 @@
 Vanof de [[19e eeuw|nègentiende ieuw]] verschenen Nedersaksische verhaalties, gedichten, anekdotes, woordenliesten en zuks in [[almenak|almenakken]] in de pervincies [[Grunnen (provìnzie)|Grunning]], [[Drenthe]], [[Oaveriessel]] en [[Gelderlaand]]. Dizze almenakken kwammen alle jaoren uut en bevatten, naost infermaotie van algemien belang, geschied- en volkskundige teksten, mangs in de volkstaal. Dit waren de eerste bladen daoras 't eschreven Nedersaksisch een stee in kreeg.
 
 ==Driemaandelijkse Bladen==
-In de ''[[Driemaandelijkse Bladen|Driemaandelijks(ch)e Bladen voor taal en volksleven in het oosten van Nederland]]'', veur 't eerst uutegèven 1901 deur de Vereeniging tot onderzoek van Taal en Volksleven in het Oosten van Nederland, stund onderzuuk oaver 't Nedersaksisch. Ok vunden ie d'r Nedersaksischtalige verhalen in, zoas van de [[Zwolle|Zwollenaor]] [[Willem Kloeke]] (1852-1934).<ref>[http://www.wieiswieinoverijssel.nl/details2.asp?Id=122 Wie is wie in Overijssel: Willem Kloeke]</ref> D'r stunden woordenliesten in, zoas die van de Gelders-Oaveriesselse dialecten, an-elegd deur de 'Nedersaksische pionier' [[Johan Hendrik Gallée]] (1847-1908).<ref>[http://www.biografischwoordenboekgelderland.nl/bio/3_Johan_Hendrik_Gallee Biografisch Woordenboek Gelderland: Johan Hendrik Gallée]</ref> Ok naamkunde en de studie van Nedersaksische literetuur hadden een stee, en bi'jdrages die de samenhang van 't Nedersaksisch en 't Platduuts behaandelden.
+In de ''[[Driemaandelijkse Bladen|Driemaandelijks(ch)e Bladen voor taal en volksleven in het oosten van Nederland]]'', veur 't eerst uutegèven 1901 deur de Vereeniging tot onderzoek van Taal en Volksleven in het Oosten van Nederland, stund onderzuuk oaver 't Nedersaksisch. Ok vunden ie d'r Nedersaksischtalige verhalen in, zoas van de [[Zwolle|Zwollenaor]] [[Willem Kloeke]] (1852-1934).<ref>[http://www.wieiswieinoverijssel.nl/details2.asp?Id=122 Wie is wie in Overijssel: Willem Kloeke]</ref> D'r stunden woordenliesten in, zoas die van de Gelders-Oaveriesselse dialecten, an-elegd deur de 'Nedersaksische pionier' [[Johan Hendrik Gallée]] (1847-1908).<ref>[http://www.biografischwoordenboekgelderland.nl/bio/3_Johan_Hendrik_Gallee Biografisch Woordenboek Gelderland: Johan Hendrik Gallée]</ref> Ok naamkunde en de studie van Nedersaksische literetuur hadden een stee, en bi'jdrages die de samenhang van 't Nedersaksisch en 't [[Platduuts]] behaandelden.
 
 De ''Bladen'' stunden onder redactie van de Achterhoekers Gallée en [[Gerrit Jan Klokman]], bi'jestaone deur mitwarkers uut aandere Oost-Nederlaandse regio's. Vanof 1909 deu [[Jan Bergsma]] de redactie. In 't crisisjaor 1931 hölden de ''Bladen'' op te verschienen, mar een ni'je riege wördden op-ezet in 1949. Hierveur wördden een veriening op-ericht deur [[Hendrik Bezoen]] uut [[Twente]] en [[Jan Naarding]] uut Drenthe.
 
 In 1955 wördden de ''Bladen'' 't orgaan van 't [[Nedersaksisch Instituut]] van de [[Rieksuniversiteit Grunning]]. In 2002 was 't vanni'js of-elopen mit de ''Driemaandelijkse Bladen''.<ref>[http://www.encyclopediedrenthe.nl/Driemaandelijkse%20Bladen Encyclopedie Drenthe Online oaver de Driemaandelijkse Bladen]</ref><ref>*Ludger Kremer (2008), 'Geschiedenis van de Nedersaksische taalkunde'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum</ref>
+
+=='t Swieniegeltje, Weerwoord, De Pennevogel==
+Rond de jaoren vieftig perbeerden een miest uut academici en [[Nedersaksische schrieveri'je|schrievers]] bestaonde [[Nedersaksische Beweging|beweging]] de stee van 't Nedersaksisch te verbetern en contacten te leggen tussen lu die in [[Nederlaand]] en [[Duutslaand]] gaanks waren mit de streektaal en de Nedersaksische cultuur. De beweging kwaamp mit iene spelling veur 't hiele Nedersaksische taalgebied, de [[Vosbergenschriefwiese]].<ref>Hendrik Entjes (1990). 'Streektaalliteratuur in Overijssel na 1945'. In Jurjen van der Kooi (red.), ''Dialectliteratuur: balans en perspectief van de moderne streektaalletterkunde in Oostnederland en Nederduitsland: een bundel studies''. Grunning: Sasland</ref>
+
+==='t Swieniegeltje===
+[[Ofbeelding:Swieniegeltje.jpg|thumb|right|140px|'' 't Swieniegeltje, tiedschrift föör vaderland en moderspråke'']]
+Van 1954 töt 1959 kwaamp in [[Knoal (dörp)|Knoal]], [[Grunnen (provìnzie)|Grunning]]''[['t Swieniegeltje]]'' uut, een literair tiedschrift veur schrieveri'je in de verschillende Nedersaksische/Platduutse dialecten. Onder de (wisselnde) redacteurs waren [[Willem Diemer]], [[Jan Niehoff]], [[Arnold Rakers]], [[Gerard Vloedbeld]], [[Simon van Wattum]] en [[Harm Werners]]. In '' 't Swieniegeltje'' stunden gedichten, verhalen, essays, teniel, liedties, boekbesprekings en ummezettings.
+
+Ien van de kenmarken van de beweging en 't tiedschrift waren de samenwarkingsbaanden tussen platschrievers uut Nederlaand en de Duutse greensstreek. Hoewal 't tiedschrift begunden as Grunnings literair blad, weur 't al rap, mit drei, vier nommers, interregionaol.
+
+Onder de skrievers die in '' 't Swieniegeltje'' publiceerden, waren [[Jan Boer]], [[Johanna van Buren]], [[Klaas Hanzen Heeroma|Klaas Heeroma]], [[Hans Heyting]], [[Derk Sibolt Hovinga]], [[Arend Lamm]], [[Anne van der Meiden]], [[Karl Sauvagerd]],  [[Wilhelmine Siefkes]], [[Gerard Vloedbeld]], [[Harm Werners]] en [[Gerriet Wilms]]. Van de redacteurs drokten bename Diemer mit zien veule bi'jdrages een stempel op 't blad. Naost alderhaand literaire inhold, weur d'r in 't blad veule prakkezeerd oaver 't uutbouwen van 't Nedersaksisch as cultuurtaal. Nao vief jaorgangen mus '' 't Swieniegeltje'' d'r deur financiële problemen mit uutskeiden.<ref>Willem Diemer (red.) (1985), ''Eendracht & Twist. Uit het archief van het letterkundig tijdschrift 't Swieniegeltje (1954-'59)''. Stabo/All-Round</ref><ref>Hendrik Entjes (2008), 'Nedersaksische letterkunde onderweg'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum</ref><ref>[http://dissertations.ub.rug.nl/faculties/arts/2003/f.g.h.loewik/ F.G.W. Löwik (2003), ''De Twentse Beweging: strijd voor modersproake en eigenheid''. Grunning: Rieksuniversiteit Grunning. Heufdstok vief en zesse]</ref>
+
+===Weerwoord===
+In 1965 hebt twei veurmaolige mitwarkers van '' 't Swieniegeltje'', [[Hendrik Entjes]] uut [[Oaveriessel]] en [[Simon van Wattum]] uut Grunning, vanni'js eprebeerd een grèensoaverschriedend literair en cultureel tiedskrift te makenm ''[[Weerwoord (tiedschrift)|Weerwoord]]''. Mit de [[Graofschop Benthem|Benthemer]] taalkundige [[Arnold Rakers]] was erisselveerd oaver 't opzetten van 't blad, mar Rakers kwaamp uut de tied nog veur 't verskienen van 't eerste nommer. Vanof 't tweide nommer zat Stephan Selhorst uut Raesfeld, Westfaolen in de redactie. Nao 't darde nommer scheidden ''Weerwoord'' d'r mit uut.<ref>Hendrik Entjes (2008), 'Nedersaksische letterkunde onderweg'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum</ref><ref>Fokko Veldman en Hanny Diemer (2008), 'De literatuur van Groningen'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum</ref>
+
+===De Pennevogel===
+Ok 't tiedschrift ''[[De Pennevogel]]'', op-ezet in 1974, zöcht ansluting bi'j 't ideaal van '' 't Swieniegeltje'' umme een stee te bieden an literaire schrieveri'je in Nedersaksische dialecten in Nederlaand en Duutslaand. De redacteurs waren [[Ton Kolkman]] uut [[Twente]], [[Jannie Bakker-Rietman]] uut [[Gellemuun]] en [[Henk Bloemhoff]] uut [[Stellingwarf]]. 't Uutbrengen van ''De Pennevogel'' verleup muizem; d'r was gebrek an belangstelling veur. 't Leste, zeuvende nommer, een dubbelnommer, kwaamp end 1979 uut.<ref>Fokko Veldman (1990), 'Naoorlogse dialectliteratuur in Groningen'. In Jurjen van der Kooi (red.), ''Dialectliteratuur: balans en perspectief van de moderne streektaalletterkunde in Oostnederland en Nederduitsland: een bundel studies''. Grunning: Sasland</ref><ref>Henk Bloemhoff en Pieter Jonker (2008), 'Stellingwerver literatuur'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum</ref>
 
 ==Platduuts==
 Sunds [[1907]] gef de [[Platduuts|Platduutse]] veriening Quickborn een tiedschrift uut, sunds 1968 onder de name ''[[Quickborn (tiedschrift)|Quickborn: Zeitschritt für plattdeutsche Sprache und Dichtung]]''. In 't vördeljaors verschienende tiedschrift viej verhandelingen, besprèkings, berichten en ni'jgies.
